# taurin

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  index.html  styles.css
.claude/commands/: commit.md  create-issue.md  create-pr.md  execute-issue.md  release.md
.claude/skills/agent-browser/: SKILL.md
.claude/skills/ios-design/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yml
src/: app.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: base64_encoder.rs  char_counter.rs  clipboard_history.rs  csv_viewer.rs  image_compressor.rs  image_editor.rs  input_history.rs  json_formatter.rs  kanban.rs  lib.rs  markdown_to_pdf.rs  password_generator.rs  pdf_tools.rs  regex_tester.rs  scratch_pad.rs  text_diff.rs  unit_converter.rs  unix_time_converter.rs  uuid_generator.rs
src/components/: base64_encoder.rs  char_counter.rs  cheatsheet_viewer.rs  clipboard_history.rs  command_palette.rs  csv_viewer.rs  image_compressor.rs  image_editor.rs  input_history.rs  json_formatter.rs  kanban_board.rs  language_switcher.rs  markdown_preview.rs  markdown_to_pdf.rs  mod.rs  password_generator.rs  pdf_tools.rs  regex_tester.rs  scratch_pad.rs  shortcut_dictionary.rs  text_diff.rs  unit_converter.rs  unix_time_converter.rs  uuid_generator.rs
src/i18n/: mod.rs  translations.rs
